--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,31 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "spatie/laravel-package-tools": "^1.18"
+        "php": "^8.3",
+        "bezhansalleh/filament-language-switch": "^3.1",
+        "cactus-galaxy/filament-astrotomic": "^0.3.0",
+        "datalinx/php-utils": "^2.5",
+        "dutchcodingcompany/filament-developer-logins": "^1.6",
+        "filament/filament": "^3.2",
+        "filament/spatie-laravel-media-library-plugin": "^3.2",
+        "laravel/tinker": "^2.10",
+        "pxlrbt/filament-environment-indicator": "^2.1",
+        "spatie/laravel-package-tools": "^1.18",
+        "spatie/laravel-permission": "^6.13"
     },
     "extra": {
         "laravel": {
             "providers": [
                 "Eclipse\\Core\\EclipseServiceProvider"
             ]
+        }
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         }
     }
 }
