--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
             "email": "info@datalinx.si"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": "^8.3",
         "bezhansalleh/filament-language-switch": "^3.1",
@@ -29,6 +30,9 @@
         "pxlrbt/filament-environment-indicator": "^2.1",
         "spatie/laravel-package-tools": "^1.18",
         "spatie/laravel-permission": "^6.13"
+    },
+    "require-dev": {
+        "eclipsephp/app": "dev-main"
     },
     "extra": {
         "laravel": {
