--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
     },
     "scripts": {
         "format": "vendor/bin/pint",
-        "test": "vendor/bin/pest",
+        "test": "vendor/bin/testbench package:test",
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ]
