--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -64,4 +64,4 @@ jobs:
         run: composer update --prefer-dist --no-progress --${{ matrix.dependency-version }}
 
       - name: Run test suite
-        run: composer test -- --coverage-clover ./coverage.xml
+        run: ./vendor/bin/pest --coverage-clover ./coverage.xml
