--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -28,7 +28,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         php: [ 8.3 ]
-        dependency-version: [ prefer-lowest, prefer-stable ]
+        dependency-version: [ prefer-stable ]
 
     name: ${{ matrix.os }} / PHP ${{ matrix.php }} / ${{ matrix.dependency-version }}
 
