ci: fix test runner branch name

--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -1,13 +1,13 @@
 name: Tests
 
 on:
-  # Run testing on all push and pull requests for the master branch that have committed changes in PHP files
+  # Run testing on all push and pull requests for the main branch that have committed changes in PHP files
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
     paths:
       - '**.php'
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
     paths:
       - '**.php'
   # Make it possible to run the workflow manually
