--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -64,4 +64,13 @@ jobs:
         run: composer update --prefer-dist --no-progress --${{ matrix.dependency-version }}
 
       - name: Run test suite
-        run: composer test
+        run: composer test -- --coverage-clover ./coverage.xml
+
+      - name: Upload coverage reports to Codecov
+        # Make sure the Codecov action is only executed once
+        if: matrix.os == 'ubuntu-latest' && matrix.php == '8.3'
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+          verbose: true
