--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -68,9 +68,8 @@ jobs:
 
       - name: Upload coverage reports to Codecov
         # Make sure the Codecov action is only executed once
-        if: matrix.os == 'ubuntu-latest' && matrix.php == '8.3'
+        if: matrix.os == 'ubuntu-latest' && matrix.php == '8.1' && matrix.dependency-version == 'prefer-stable'
         uses: codecov/codecov-action@v5
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
           verbose: true
