--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -71,5 +71,6 @@ jobs:
         if: matrix.os == 'ubuntu-latest' && matrix.php == '8.3' && matrix.dependency-version == 'prefer-stable'
         uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage.xml
           verbose: true
