--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "dutchcodingcompany/filament-developer-logins": "^1.6",
         "filament/filament": "^3.2.126",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
+        "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.10",
         "pxlrbt/filament-environment-indicator": "^2.1",
         "spatie/laravel-package-tools": "^1.18"
