build: publish eclipse config after composer update cmd

--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
     },
     "scripts": {
         "format": "vendor/bin/pint",
-        "test": "vendor/bin/testbench package:test"
+        "test": "vendor/bin/testbench package:test",
+        "post-update-cmd": "./vendor/bin/testbench vendor:publish --tag=eclipse-config"
     },
     "extra": {
         "laravel": {
