--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.10",
         "pxlrbt/filament-environment-indicator": "^2.1",
-        "spatie/laravel-package-tools": "^1.18"
+        "spatie/laravel-package-tools": "^1.18",
+        "tangodev-it/filament-emoji-picker": "^1.0"
     },
     "require-dev": {
         "laravel/pint": "^1.21",
