--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "eclipsephp/world-plugin": "dev-main",
         "filament/filament": "^3.2.126",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
+        "laravel/horizon": "^5.31",
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.10",
         "pxlrbt/filament-environment-indicator": "^2.1",
