--- a/.lando.dist.yml
+++ b/.lando.dist.yml
@@ -1,13 +1,12 @@
+#file: noinspection ComposeUnknownKeys
 name: eclipse-core
-config:
-  php: '8.3'
-  via: cli
 services:
   appserver:
     type: php:custom
     xdebug: "debug,develop,coverage"
+    via: cli
     overrides:
-      image: slimdeluxe/php:8.3-v1.0
+      image: slimdeluxe/php:8.3-v1.1
 tooling:
   php:
     service: appserver
