build: bump filament version

--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,9 @@
         "datalinx/php-utils": "^2.5",
         "dutchcodingcompany/filament-developer-logins": "^1.6",
         "eclipsephp/world-plugin": "dev-main",
-        "filament/filament": "^3.2.126",
+        "filament/filament": "^3.3",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
+        "laravel/framework": "^11.0",
         "laravel/horizon": "^5.31",
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.10",
