--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,10 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "Workbench\\App\\": "workbench/app/",
+            "Workbench\\Database\\Factories\\": "workbench/database/factories/",
+            "Workbench\\Database\\Seeders\\": "workbench/database/seeders/"
         }
     },
     "require": {
@@ -64,7 +67,25 @@
     "scripts": {
         "format": "vendor/bin/pint",
         "test": "vendor/bin/testbench package:test",
-        "post-update-cmd": "./vendor/bin/testbench vendor:publish --tag=eclipse-config"
+        "post-install-cmd": "@setup",
+        "post-update-cmd": "@setup",
+        "post-autoload-dump": [
+            "@clear",
+            "@prepare"
+        ],
+        "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
+        "prepare": "@php vendor/bin/testbench package:discover --ansi",
+        "build": "@php vendor/bin/testbench workbench:build --ansi",
+        "serve": [
+            "Composer\\Config::disableProcessTimeout",
+            "@build",
+            "@php vendor/bin/testbench serve --ansi"
+        ],
+        "setup": [
+            "npm install",
+            "@php vendor/bin/testbench vendor:publish --tag=eclipse-config",
+            "@php vendor/bin/testbench package:sync-skeleton"
+        ]
     },
     "extra": {
         "laravel": {
