--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "bezhansalleh/filament-shield": "^3.3",
         "datalinx/php-utils": "^2.5",
         "dutchcodingcompany/filament-developer-logins": "^1.6",
+        "eclipsephp/common": "dev-main",
         "eclipsephp/world-plugin": "dev-main",
         "filament/filament": "^3.3",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
