--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,8 @@
         "pxlrbt/filament-environment-indicator": "^2.1",
         "spatie/laravel-package-tools": "^1.18",
         "spatie/laravel-translatable": "^6.11",
-        "tangodev-it/filament-emoji-picker": "^1.0"
+        "tangodev-it/filament-emoji-picker": "^1.0",
+        "typesense/typesense-php": "^5.0"
     },
     "require-dev": {
         "laravel/pint": "^1.21",
