--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "laravel/horizon": "^5.31",
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.10",
+        "opcodesio/log-viewer": "^3.17",
         "pxlrbt/filament-environment-indicator": "^2.1",
         "spatie/laravel-package-tools": "^1.18",
         "spatie/laravel-translatable": "^6.11",
@@ -86,6 +87,7 @@
         ],
         "setup": [
             "npm install",
+            "@php vendor/bin/testbench eclipse:post-composer-update",
             "@php vendor/bin/testbench vendor:publish --tag=eclipse-config",
             "@php vendor/bin/testbench package:sync-skeleton"
         ]
