--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
         "laravel/tinker": "^2.10",
         "opcodesio/log-viewer": "^3.17",
         "pxlrbt/filament-environment-indicator": "^2.1",
+        "pxlrbt/filament-excel": "^2.4",
         "spatie/laravel-package-tools": "^1.18",
         "spatie/laravel-translatable": "^6.11",
         "tangodev-it/filament-emoji-picker": "^1.0",
