--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
         "pxlrbt/filament-excel": "^2.4",
         "spatie/laravel-package-tools": "^1.18",
         "spatie/laravel-translatable": "^6.11",
+        "stechstudio/filament-impersonate": "^3.16",
         "tangodev-it/filament-emoji-picker": "^1.0",
         "typesense/typesense-php": "^5.0"
     },
