--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
         "opcodesio/log-viewer": "^3.17",
         "pxlrbt/filament-environment-indicator": "^2.1",
         "pxlrbt/filament-excel": "^2.4",
+        "pxlrbt/filament-spotlight": "^1.3",
         "shuvroroy/filament-spatie-laravel-health": "^2.3",
         "spatie/laravel-package-tools": "^1.18",
         "spatie/laravel-translatable": "^6.11",
