--- a/composer.json
+++ b/composer.json
@@ -47,8 +47,8 @@
         "bezhansalleh/filament-shield": "^4.0",
         "datalinx/php-utils": "^2.5",
         "dutchcodingcompany/filament-developer-logins": "^2.0",
-        "eclipsephp/common": "dev-f4@dev",
-        "eclipsephp/world-plugin": "dev-f4@dev",
+        "eclipsephp/common": "dev-main",
+        "eclipsephp/world-plugin": "dev-main",
         "filament/filament": "^4.0",
         "filament/spatie-laravel-media-library-plugin": "^4.0",
         "lara-zeus/spatie-translatable": "^1.0",
@@ -70,16 +70,6 @@
         "symfony/mailgun-mailer": "^7.3",
         "typesense/typesense-php": "^5.0"
     },
-    "repositories": [
-        {
-          "type": "vcs",
-          "url": "https://github.com/KilianTrunk/eclipsephp-common.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/KilianTrunk/eclipsephp-world-plugin.git"
-          }
-      ],
     "require-dev": {
         "laravel/pint": "^1.21",
         "orchestra/testbench": "^10.0",
