--- a/composer.json
+++ b/composer.json
@@ -42,35 +42,33 @@
     },
     "require": {
         "php": "^8.3",
-        "bezhansalleh/filament-language-switch": "^3.1",
-        "bezhansalleh/filament-panel-switch": "^1.1",
-        "bezhansalleh/filament-shield": "^3.3",
+        "bezhansalleh/filament-language-switch": "^4.0",
+        "bezhansalleh/filament-panel-switch": "^2.0",
+        "bezhansalleh/filament-shield": "^4.0",
         "datalinx/php-utils": "^2.5",
-        "dutchcodingcompany/filament-developer-logins": "^1.6",
+        "dutchcodingcompany/filament-developer-logins": "^2.0",
         "eclipsephp/common": "dev-main",
         "eclipsephp/world-plugin": "dev-main",
-        "filament/filament": "^3.3",
-        "filament/spatie-laravel-media-library-plugin": "^3.2",
-        "filament/spatie-laravel-translatable-plugin": "^3.2",
-        "hasnayeen/themes": "^3.0",
+        "filament/filament": "^4.0",
+        "filament/spatie-laravel-media-library-plugin": "^4.0",
+        "lara-zeus/spatie-translatable": "^1.0",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.31",
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.10",
+        "nben/filament-record-nav": "^1.0",
         "opcodesio/log-viewer": "^3.17",
-        "pxlrbt/filament-environment-indicator": "^2.1",
-        "pxlrbt/filament-excel": "^2.4",
-        "pxlrbt/filament-spotlight": "^1.3",
-        "shuvroroy/filament-spatie-laravel-health": "^2.3",
+        "pxlrbt/filament-environment-indicator": "^3.0",
+        "pxlrbt/filament-excel": "^3.0",
+        "pxlrbt/filament-spotlight": "^2.0",
+        "shuvroroy/filament-spatie-laravel-health": "^3.0",
         "spatie/laravel-package-tools": "^1.18",
         "spatie/laravel-translatable": "^6.11",
         "spatie/security-advisories-health-check": "^1.2",
-        "stechstudio/filament-impersonate": "^3.16",
+        "stechstudio/filament-impersonate": "^4.0",
         "symfony/http-client": "^7.3",
         "symfony/mailgun-mailer": "^7.3",
-        "tangodev-it/filament-emoji-picker": "^1.0",
-        "typesense/typesense-php": "^5.0",
-        "nben/filament-record-nav": "^1.0"
+        "typesense/typesense-php": "^5.0"
     },
     "require-dev": {
         "laravel/pint": "^1.21",
